--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.validation-query=select 'x'
 spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
+
+logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=debug
