--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=80
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://118.184.179.116:3306/virtual15Units?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=89757123
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.datasource.druid.initial-size=5
