--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-server.port=80
+
+server.port=443
+server.http.port=80
+server.ssl.key-store=classpath:bilanee.com.jks
+server.ssl.key-store-password=9quagq3m
+server.ssl.keyStoreType=JKS
 
 spring.datasource.url=jdbc:mysql://118.184.179.116:3306/virtual15units?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
