--- a/pom.xml
+++ b/pom.xml
@@ -374,6 +374,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>true</addMavenDescriptor>
+                    </archive>
+                    <outputDirectory>${project.build.directory}/../../bin</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
         <testResources>
             <testResource>
