--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -21,4 +21,6 @@ spring.datasource.druid.validation-query=select 'x'
 spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
 
+spring.web.resources.static-locations=
+
 logging.level.com.stellariver.milky.demo.infrastructure.database.mapper=debug
