--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,11 @@
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>3.5.3.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-joda</artifactId>
+                <version>2.5.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
