--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.ssl.key-store=classpath:bilanee.com.jks
 server.ssl.key-store-password=9quagq3m
 server.ssl.keyStoreType=JKS
 
-spring.datasource.url=jdbc:mysql://118.184.179.116:3306/virtual15units?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://118.184.179.116:3306/24prdcase?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=89757123
 
