--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <properties>
         <revision>1.0.0-SNAPSHOT</revision>
-        <milky.version>0.1.8-SNAPSHOT</milky.version>
+        <milky.version>0.1.9</milky.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring.boot.version>2.7.7</spring.boot.version>
